Project page fix on safari , display:flex property was removed.

--- a/Portfolio.Frontend/src/styles/singleProject/_contentRow.scss
+++ b/Portfolio.Frontend/src/styles/singleProject/_contentRow.scss
@@ -8,7 +8,7 @@
         letter-spacing: 7px;
     }
     h3{
-        // padding: 1em 0 0 0;
+       
         font-weight: 700;
         letter-spacing: 5px;
     }
@@ -33,8 +33,7 @@
         }
     }
   
-    .icon-container{
-        display: flex;    
+    .icon-container{ 
         .icon{
             margin-top:-20px;
             max-height: initial;
